// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render connected to store component Should HeaderUserBlock connected to store render correctly 1`] = `
<div
  className="user-block"
>
  <a
    href="/mylist"
    onClick={[Function]}
  >
    <div
      className="user-block__avatar"
    >
      <img
        alt="User avatar"
        height="63"
        src="https://assets.htmlacademy.ru/intensives/javascript-3/avatar/3.jpg"
        width="63"
      />
    </div>
  </a>
</div>
`;

exports[`Should HeaderUserBlockWithoutStore render correctly with Authorization Status 1`] = `
<div
  className="user-block"
>
  <a
    href="/mylist"
    onClick={[Function]}
  >
    <div
      className="user-block__avatar"
    >
      <img
        alt="User avatar"
        height="63"
        src="https://assets.htmlacademy.ru/intensives/javascript-3/avatar/3.jpg"
        width="63"
      />
    </div>
  </a>
</div>
`;

exports[`Should HeaderUserBlockWithoutStore render correctly without Authorization Status 1`] = `
<div
  className="user-block"
>
  <a
    className="user-block__link"
    href="/login"
    onClick={[Function]}
  >
    Sign in
  </a>
</div>
`;
